undo enable-preview mods